--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "raf-loop": "^1.1.3",
     "react": "^16.5.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "react-transition-group": "^2.5.0",
     "superagent": "^4.0.0-beta.5",
     "three": "^0.97.0",
     "three-effectcomposer": "0.0.1"
