--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.5.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.5.2",
+    "react-preloaders": "^2.1.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-transition-group": "^2.5.0",
